@@ -32,6 +32,7 @@ Rails.application.routes.draw do
     post :start_installation, on: :member
     post :start_update, on: :member
     resource :health_check, only: [:create]
+    resource :swap, only: [:show, :create, :destroy]
     resources :apps, only: [:index, :new, :create, :destroy, :show] do
       resources :services, controller: "app_services", only: :index do
         post :create, on: :member
