@@ -22,3 +22,4 @@ v 0.0.1 (unreleased)
 * Remember a login for 30 days (jvanbaarsen)
 * Enable SSL for your apps in the web interface (jvanbaarsen)
 * Add password reset functionality (jvanbaarsen)
+* Allow users to enable swap for their app servers (jvanbaarsen)
